--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_NAME=signup_auth
-DB_USER=dynamicuserflow
-DB_PASSWORD=8pPGMqnfrbA0hDq5Rj9X
-DB_HOST=signup-auth.cj0em0gu23oo.ap-south-1.rds.amazonaws.com
-DB_PORT=5432
-EMAIL_USER=modiakshar2001@gmail.com
-EMAIL_PASSWORD=aapx fbxh ulwt rpnb
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+EMAIL_USER=
+EMAIL_PASSWORD=
